--- a/nginx_deploy.yaml
+++ b/nginx_deploy.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.10.2
+        image: 10.28.16.107:8899/library/demo-nginx:0.1.0
         imagePullPolicy: IfNotPresent
         resources:
           limits:
